replacing cluster_id with cluster_name
